--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <section id="about" class="max-w-5xl mx-auto py-16 fade-section">
                 <h2 class="text-4xl sm:text-5xl font-bold mb-6 text-purple-700">About Me</h2>
                 <p class="text-lg text-gray-700 leading-relaxed">
-                    My name is Teniola Toluwani OLayide Adeyemi. I’m focused on becoming a software engineer, and I’ve been building my
+                    Student ID: 3125850
+                    Bachelor of Science with Honours in Computer Science|
+My name is Teniola Toluwani OLayide Adeyemi. I’m focused on becoming a software engineer, and I’ve been building my
                     foundation through online learning in data structures and algorithms, web development . I’ve built several projects
                     using HTML, CSS, JavaScript, Node.js, and APIs, and I’m currently Working on an AI project Right now, I’m aiming to
                     study Computer Science at the university of east London so I can take my technical abilities to the next level and work
@@ -345,6 +347,11 @@
                 young people’s data. Clearer consequences for platforms that allow harmful or misleading content targeted at minors.
                 More transparency on how recommendation algorithms work. Better education in schools about digital safety and critical
                 thinking.
+
+                ||Stricter visa & dependent family restrictions (since 2024)
+                Raised financial/maintenance requirements for student visas (2025
+                Post study (Graduate) visa route being shortened (starting 2027)
+                
             </p>
         </section>
 
