gvgv.ug.ihih/ioh

--- a/index.html
+++ b/index.html
@@ -301,16 +301,14 @@ My name is Teniola Toluwani OLayide Adeyemi. I’m focused on becoming a softwar
                 projects and other aspects of software engineering. I also plan to work closely with experienced engineers so I can
                 improve my skills faster and build a strong technical foundation in the industry.
                 Early Career:
-                After graduating, I aim to enter the workforce as a Backend Engineer at a major tech company such as Microsoft, with a
-                starting salary between £25,000–£40,000, which is about ₦48,750,000 – ₦78,000,000. This is a realistic range for
-                early-career engineers in London.
+                After graduating, I aim to enter the workforce as a Fullstack Engineer at the fintech company paystack, with a
+                starting monthly salary between £250–£450, which is about ₦500,000 – ₦900,000.
                 Long-Term Goals:
                 Over time, I intend to progress to mid-level and senior engineering roles. With the technical expertise and business
                 experience I gain, my goal is to eventually establish an AI-driven tech start-up specializing in innovative web and
                 enterprise solutions.
                 Point:
-                Overall, my career plan is clearly defined, connecting my studies, early work experience, and long-term entrepreneurial
-                ambitions in a structured pathway.
+                Overall, I have carefully mapped out my career plan, connecting my studies, early work experience.
                 Evidence:
                 As I advance, I plan to move into mid-level and senior engineering positions and eventually co-found an AI-driven tech
                 startup, leveraging the expertise and professional network I develop in the UK.
@@ -358,7 +356,7 @@ My name is Teniola Toluwani OLayide Adeyemi. I’m focused on becoming a softwar
         <section id="previous-work-exp" class="max-w-5xl mx-auto py-16 fade-section">
             <h3 class="text-3xl sm:text-4xl font-bold mb-6 text-purple-700">prev work exp</h3>
             <p class="text-lg text-gray-700 leading-relaxed mb-8">
-                TI have completed online learning in Data Structures & Algorithms, Full-Stack Web Development and have undertaken
+                I did some online learning in Data Structures & Algorithms, Full-Stack Web Development and have undertaken
                 personal coding projects. This preparation allows me to transition immediately into a structured university program
                 without losing momentum. Starting now ensures that my prior knowledge is reinforced in a formal academic setting, and I
                 can immediately begin applying it to real-world projects and internships as well as I am financially and mentally
