--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ My name is Teniola Toluwani OLayide Adeyemi. I’m focused on becoming a softwar
                     foundation through online learning in data structures and algorithms, web development . I’ve built several projects
                     using HTML, CSS, JavaScript, Node.js, and APIs, and I’m currently Working on an AI project Right now, I’m aiming to
                     study Computer Science at the university of east London so I can take my technical abilities to the next level and work
-                    on building scalable systems that Impact millions of people at Microsoft or Meta, where I can grow as an engineer and
+                    on building scalable systems that Impact millions of people at Paystack or Flutterwave, where I can grow as an engineer and
                     contribute to meaningful products.
                 </p>
             </section>
